# icra_foodly_custom

./: CMakeLists.txt  README.md  foodly_rd.repos  package.xml
conveyor_control/: package.xml  setup.cfg  setup.py
conveyor_control/conveyor_control/: conveyor_server.py
custom_msg/: CMakeLists.txt  package.xml
custom_msg/action/: MotionPlan.action  SpeedControl.action
foodly_rd/: CMakeLists.txt
foodly_rd_control/: CMakeLists.txt  README.md
foodly_rd_control/config/: center_manipulator_config.yaml  left_manipulator_config.yaml
foodly_rd_control/include/foodly_rd_control/: foodly_rd_hardware.hpp
foodly_rd_control/src/: foodly_rd_hardware.cpp
foodly_rd_description/: CMakeLists.txt  README.md  package.xml
foodly_rd_description/launch/: display.launch.py
foodly_rd_description/meshes/collision/: D415.stl  Gripper_v23.2.STL  L_GripperA.stl  L_Link1.stl  L_Link2.stl  L_Link4.stl  L_Link5.stl  L_Link6.stl  Neck1.stl  Part2.stl  Part5.stl  Part6.stl  R_GripperA.stl  R_Link3.stl  R_Link4.stl  R_Link6.stl  R_Link7.stl
foodly_rd_description/meshes/visual/: Base.stl  D415.stl  L_GripperB.stl  L_Link1.stl  L_Link2.stl  L_Link5.stl  L_Link6.stl  LowerbodyA.stl  LowerbodyB.stl  LowerbodyC.stl  LowerbodyE1.stl  LowerbodyGe.stl  LowerbodyGy.stl  Neck2_2.stl  Part1.stl  Part3.stl  Part4.stl  R_GripperA.stl  R_GripperB.stl  R_Link3.stl  R_Link5.stl  R_Link7.stl  Tong.stl
foodly_rd_description/test/: test_robot_description_loader.py
foodly_rd_description/urdf/: foodly_rd_body.xacro  foodly_rd_center.ros2_control.xacro  foodly_rd_left_gripper.xacro  foodly_rd_right_gripper.xacro
foodly_rd_examples/: CMakeLists.txt  README.md  package.xml
foodly_rd_examples/include/foodly_rd_examples/: neck_jt_control.hpp  object_tracker.hpp
foodly_rd_examples/launch/: example.launch.py  head_camera_tracking.launch.py
foodly_rd_examples/src/: color_detection.cpp  gripper_control.cpp  left_arm_server.cpp  neck_control.cpp  neck_jt_control.cpp  object_tracker.cpp  pick_and_place_left_arm.cpp  pick_and_place_right_arm_waist.cpp  pose_presets.cpp  right_arm_server.cpp  test_left_arm.cpp  test_right_arm.cpp  waist_control.cpp  waist_jt_control.cpp
foodly_rd_gazebo/: CMakeLists.txt  README.md
foodly_rd_gazebo/config/: bridge.yaml
foodly_rd_gazebo/launch/: foodly_rd_with_table.launch.py
foodly_rd_gazebo/worlds/: icra_world.sdf  table.sdf
foodly_rd_gazebo/worlds/meshes/: Bowl.stl  Foodly_Table.stl
foodly_rd_moveit_config/: CMakeLists.txt  README.md  package.xml
foodly_rd_moveit_config/config/: foodly_rd.srdf  moveit.rviz
foodly_rd_moveit_config/launch/: setup_assistant.launch.py
foodly_rd_tools/: CMakeLists.txt  README.md
foodly_rd_vision/: CMakeLists.txt
foodly_rd_vision/launch/: chest_camera.launch.py
frames/: frames_2024-05-09_11.50.00.gv
icra_central/: CMakeLists.txt  package.xml
icra_central/scripts/: central_client.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_msg/share/custom_msg/: package.bash  package.zsh
install/foodly_rd/share/foodly_rd/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/foodly_rd_control/include/foodly_rd_control/: visibility_control.h
install/foodly_rd_control/share/foodly_rd_control/: foodly_rd_hardware.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/foodly_rd_description/share/foodly_rd_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/foodly_rd_examples/include/pose_presets/: pose_presets.hpp
install/foodly_rd_examples/lib/foodly_rd_examples/: gripper_control  neck_control  pick_and_place_left_arm  pick_and_place_right_arm_waist  waist_control
install/foodly_rd_examples/share/foodly_rd_examples/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/foodly_rd_gazebo/share/foodly_rd_gazebo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/foodly_rd_moveit_config/share/foodly_rd_moveit_config/: .setup_assistant  local_setup.dsv  (+5 more)
install/foodly_rd_tools/share/foodly_rd_tools/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
state_machine/: package.xml  setup.py
state_machine/state_machine/: state_machine.py
(+65 files in other folders)
