<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foodly_rd_tools</name>
  <version>0.1.0</version>
  <description>Tools for Foodly Type R</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>RT Corp. Software License Version 1.0</license>

  <author email="s.aoki@rt-net.jp">Shota Aoki</author>
  <author email="hayashi@rt-net.jp">RikiHayashi</author>
  <author email="kuwagata@rt-net.jp">Atsushi Kuwagata</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
